--- a/Right_bash/Right_bash.vcxproj.filters
+++ b/Right_bash/Right_bash.vcxproj.filters
@@ -15,15 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\main.cpp">
+    <ClCompile Include="..\src\main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\getopt.c">
+    <ClCompile Include="..\src\getopt.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\getopt.h">
+    <ClInclude Include="..\src\getopt.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
