--- a/Right_bash/Right_bash.vcxproj.filters
+++ b/Right_bash/Right_bash.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="..\src\getopt.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\main.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
